--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <div class="logo">📚 المكتبة الرقمية</div>
         <nav>
             <ul class="navbar">
-                <li><a href="home.html">الرئيسية</a></li>
+                <li><a href="index.html">الرئيسية</a></li>
                 <li><a href="about.html" class="active">من نحن</a></li>
                 <li><a href="books.html">الكتب</a></li>
             </ul>
