--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="logo">📚 المكتبة الرقمية</div>
         <nav>
             <ul class="navbar">
-                <li><a href="home.html" class="active">الرئيسية</a></li>
+                <li><a href="index.html" class="active">الرئيسية</a></li>
                 <li><a href="about.html">من نحن</a></li>
                 <li><a href="books.html">الكتب</a></li>
             </ul>
