--- a/books.html
+++ b/books.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul class="navbar">
-                <li><a href="home.html">الرئيسية</a></li>
+                <li><a href="index.html">الرئيسية</a></li>
                 <li><a href="about.html">من نحن</a></li>
                 <li><a href="books.html" class="active">الكتب</a></li>
             </ul>
