--- a/about.html
+++ b/about.html
@@ -57,6 +57,11 @@
                     <p>c2</p>
                     <p> ezzat_239561</p>
                 </div>
+                <div class="team-card">
+                    <h3>شهد العاني</h3>
+                    <p>c4</p>
+                    <p>shahad_146884</p>
+                </div>
             </div>
         </section>
     </main>
