--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="welcome-section">
             <h1>مرحبًا بكم في المكتبة الرقمية</h1>
             <p>استمتع بتجربة فريدة من القراءة الرقمية مع مكتبتنا التي تقدم أحدث الكتب في جميع المجالات.</p>
-            <a href="books.html" class="explore-btn">استكشف الكتب</a>
+            <a href="https://ali-kanat.github.io/My-project/" class="explore-btn">رابط الاستضافة</a>
         </section>
 
         <section class="features">
